Added documentation of current files in raw/

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Before running this notebook:**\n",
     "<br>\n",
-    "Set up the following file structure (namely, the `raw/`, `processed/`, and `archive/` folders within `data/`). Populate `raw/` with the data that we have been given. \n",
+    "Set up the following file structure (namely, the `raw/`, `processed/`, and `archive/` folders within `data/`). Populate `raw/` with the data that we have been given (shown below). \n",
     "\n",
     "```\n",
     "data/\n",
@@ -16,6 +16,8 @@
     "│   ├── district.json\n",
     "│   ├── 2024-09-11_District_A_Benchmarks.json\n",
     "│   ├── 2024-09-11_District_A_Scores.json\n",
+    "│   ├── 2024-09-11 District A Vendor Student Usage.json\n",
+    "│   ├── vendorProducts_202409111049.csv\n",
     "│   └── ... (future raw data files)\n",
     "├── processed/\n",
     "└── archive/\n",
