checked courseSections ids

--- a/maya-explore.ipynb
+++ b/maya-explore.ipynb
@@ -227,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xs/50kmp8g92x99q2dxvv031c980000gn/T/ipykernel_89697/713448464.py:14: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/xs/50kmp8g92x99q2dxvv031c980000gn/T/ipykernel_97355/713448464.py:14: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  courseSectionsRosters_df = pd.read_csv(filename_fifth, header = 0)\n"
      ]
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "1047"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17662"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "courseSections_df.id.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +465,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>courseSectionId</th>\n",
+       "      <th>studentId</th>\n",
+       "      <th>studentLevel</th>\n",
+       "      <th>ticket</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1047696</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45333</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1047704</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>56116</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1047706</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45345</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1047715</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45400</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1047729</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45413</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1047738</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45429</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1047740</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>56118</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1047746</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45438</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1047751</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45444</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1047752</td>\n",
+       "      <td>39975</td>\n",
+       "      <td>45445</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  courseSectionId  studentId  studentLevel ticket\n",
+       "0  1047696            39975      45333             4    NaN\n",
+       "1  1047704            39975      56116             4    NaN\n",
+       "2  1047706            39975      45345             4    NaN\n",
+       "3  1047715            39975      45400             4    NaN\n",
+       "4  1047729            39975      45413             4    NaN\n",
+       "5  1047738            39975      45429             4    NaN\n",
+       "6  1047740            39975      56118             4    NaN\n",
+       "7  1047746            39975      45438             4    NaN\n",
+       "8  1047751            39975      45444             4    NaN\n",
+       "9  1047752            39975      45445             4    NaN"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "courseSectionsRosters_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17659"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "courseSectionsRosters_df.courseSectionId.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(list(courseSectionsRosters_df.courseSectionId)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(courseSectionsRosters_df['courseSectionId'].isin(courseSections_df['id']).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40388\n",
+      "40389\n",
+      "40390\n",
+      "40391\n",
+      "40392\n",
+      "40393\n",
+      "40394\n",
+      "40395\n",
+      "40396\n",
+      "40397\n",
+      "40398\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "id_array = []\n",
+    "courseSectionsIds = list(courseSections_df.id)\n",
+    "courseSectionRostersIds = list(courseSectionsRosters_df.courseSectionId)\n",
+    "for id in courseSectionsIds:\n",
+    "    if id in courseSectionRostersIds:\n",
+    "        id_array.append(id)\n",
+    "        print(id)\n",
+    "    if count == 10:\n",
+    "        break\n",
+    "    count += 1\n",
+    "\n",
+    "print(len(id_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +1069,7 @@
        "[10 rows x 69 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +1114,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +1134,7 @@
        "(303750, 69)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +1154,7 @@
        "125223"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1302,7 @@
        "9          45  2017      7  value_scantronReading  3008.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1325,7 @@
        "       'value_actEnglishScore', 'value_actScienceScore'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1516,7 @@
        "9  11899     72609      44814       0  2018            1                   0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1536,7 @@
        "(158007, 7)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1556,7 @@
        "23"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1742,7 @@
        "9                     1                  NaN                   0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,148 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>courseSectionId</th>\n",
-       "      <th>studentId</th>\n",
-       "      <th>studentLevel</th>\n",
-       "      <th>ticket</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1047696</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45333</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1047704</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>56116</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1047706</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45345</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1047715</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45400</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1047729</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45413</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1047738</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45429</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1047740</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>56118</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1047746</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45438</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1047751</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45444</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1047752</td>\n",
-       "      <td>39975</td>\n",
-       "      <td>45445</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id  courseSectionId  studentId  studentLevel ticket\n",
-       "0  1047696            39975      45333             4    NaN\n",
-       "1  1047704            39975      56116             4    NaN\n",
-       "2  1047706            39975      45345             4    NaN\n",
-       "3  1047715            39975      45400             4    NaN\n",
-       "4  1047729            39975      45413             4    NaN\n",
-       "5  1047738            39975      45429             4    NaN\n",
-       "6  1047740            39975      56118             4    NaN\n",
-       "7  1047746            39975      45438             4    NaN\n",
-       "8  1047751            39975      45444             4    NaN\n",
-       "9  1047752            39975      45445             4    NaN"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "courseSectionsRosters_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1883,7 @@
        "9          45  2017      7  value_scantronReading  3008.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
