--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,52 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['72609', '11333', '39195', '27172', '61673', '37017', '36130',\n",
-       "       '62382', '62509', '62508', '37269', '25405', '52447', '52448',\n",
-       "       '61544', '7273', '63431', '63432', '22410', '63616', '23165',\n",
-       "       '7035', '11464'], dtype=object)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vendorUsage_df['vendorId'].unique()"
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['11361', '21186', '21143', '11333', '13895', '11272', '11179',\n",
-       "       '72615', '14726', '72616', '72617', '72606', '72618', '72619',\n",
-       "       '14617', '13793', '72622', '11464', '14026', '11281'], dtype=object)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vendorKey_df['vendorId'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "Number of vendorIds in vendorUsage with no key: 21\n",
-      "VendorIds with no key: {'62382', '25405', '37269', '27172', '62509', '23165', '62508', '52448', '72609', '61673', '36130', '7273', '39195', '63432', '37017', '63616', '52447', '61544', '63431', '7035', '22410'}\n"
+      "VendorIds with no key: {63616, 22410, 37269, 37017, 39195, 72609, 36130, 27172, 62508, 62509, 62382, 25405, 63431, 63432, 52447, 52448, 61544, 61673, 7273, 7035, 23165}\n"
      ]
     }
    ],
@@ -259,6 +224,41 @@
     "\n",
     "print(f\"Number of vendorIds in vendorUsage with no key: {num_missing}\")\n",
     "print(f\"VendorIds with no key: {missing_keys}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vendor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(158007, 7)\n",
+      "Index(['id', 'vendorId', 'studentId', 'active', 'year', 'usageTypeId',\n",
+      "       'weeklyUsageMinutes'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vendorUsage_df.shape)\n",
+    "print(vendorUsage_df.columns)"
    ]
   }
  ],
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
