Added updated vendorKey

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -38,18 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
+    "import shutil\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,23 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/archive/a_vendorKey_2024-09-11.csv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "file_names = [\n",
     "    ('2024-09-11 District A Benchmarks.json', 'a_benchmarks_2024-09-11.json'),\n",
     "    ('2024-09-11 District A Scores.json', 'a_scores_2024-09-11.json'),\n",
     "    ('2024-09-11 District A Vendor Student Usage.json', 'a_vendorUsage_2024-09-11.json'),\n",
     "    ('district.json', 'a_all_2024-08-29.json'),\n",
-    "    ('vendorProducts_202409111049.csv', 'a_vendorKey_2024-09-11.csv')\n",
+    "    ('vendorProducts_202409111049.csv', 'a_vendorKey_2024-09-11.csv'),\n",
+    "    ('vendors_202410081500.json', 'a_vendorKey_2024-10-08.csv')\n",
     "]\n",
     "\n",
     "for old_name, new_name in file_names:\n",
     "    old_path = os.path.join(data_path, 'raw', old_name)\n",
     "    new_path = os.path.join(data_path, 'raw', new_name)\n",
     "    if os.path.exists(old_path) and not os.path.exists(new_path):\n",
-    "        os.rename(old_path, new_path)"
+    "        os.rename(old_path, new_path)\n",
+    "\n",
+    "shutil.move('data/raw/a_vendorKey_2024-09-11.csv', 'data/archive/a_vendorKey_2024-09-11.csv')"
    ]
   },
   {
@@ -128,7 +143,7 @@
     "vendorUsage_data = vendorUsage_json[list(vendorUsage_json.keys())[0]]\n",
     "vendorUsage_df = pd.DataFrame(vendorUsage_data)\n",
     "\n",
-    "vendorKey_df = pd.read_csv('data/raw/a_vendorKey_2024-09-11.csv')"
+    "vendorKey_df = pd.read_csv('data/raw/a_vendorKey_2024-10-08.csv')"
    ]
   },
   {
@@ -154,112 +169,6 @@
     "scores_df.to_csv(os.path.join(data_path, 'processed', 'a_scores_2024-09-11.csv'), index=False)\n",
     "vendorUsage_df.to_csv(os.path.join(data_path, 'processed', 'a_vendorUsage_2024-09-11.csv'), index=False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can stop here! The rest of the notebook is just flagging issues in the data that need to be resolved."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Potential issues"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We currently have two DataFrames with info on vendors: `vendorUsage_df` which contains usage stats with numerical ids for each vendor, and `vendorKey_df` which is a lookup table containing the name and id of each vendor. We will merge the two and export it as a single csv.\n",
-    "\n",
-    "Actually we won't yet because the ids don't match up."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vendorUsage_df = vendorUsage_df.merge(\n",
-    "#     vendorKey_df[['vendorId', 'productName']], \n",
-    "#     on='vendorId', \n",
-    "#     how='left'\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of vendorIds in vendorUsage with no key: 21\n",
-      "VendorIds with no key: {63616, 22410, 37269, 37017, 39195, 72609, 36130, 27172, 62508, 62509, 62382, 25405, 63431, 63432, 52447, 52448, 61544, 61673, 7273, 7035, 23165}\n"
-     ]
-    }
-   ],
-   "source": [
-    "set1 = set(vendorUsage_df['vendorId'].unique())\n",
-    "set2 = set(vendorKey_df['vendorId'].unique())\n",
-    "\n",
-    "missing_keys = set1 - set2\n",
-    "num_missing = len(missing_keys)\n",
-    "\n",
-    "print(f\"Number of vendorIds in vendorUsage with no key: {num_missing}\")\n",
-    "print(f\"VendorIds with no key: {missing_keys}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Scores"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vendor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(158007, 7)\n",
-      "Index(['id', 'vendorId', 'studentId', 'active', 'year', 'usageTypeId',\n",
-      "       'weeklyUsageMinutes'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(vendorUsage_df.shape)\n",
-    "print(vendorUsage_df.columns)"
-   ]
   }
  ],
  "metadata": {
@@ -278,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
